ENTRYSTORE-758 #resolve Adding additional checks for names